# sv_gmm

./: .gitignore  .long_reads.py.swp  HG00096.hg38.cram.crai  HG00099.hg38.cram.crai  HG03600.hg38.cram.crai  README.md  analyze_calibration_results.py  bed_intersect.sh  config.toml  download_long_read_evidence.py  download_long_read_evidence_old.py  em.py  em_1d.py  find_missing_samples.py  gatk_clustering.py  gatk_svcluster.sh  generate_data.py  get_bam_files.py  get_cigar.sh  get_mapped_files.sh  gmm.ipynb  gmm1d.m  gmm_types.py  helper.py  index_bam.sh  long_reads.py  meeting_notes.md  min_requirements.txt  paper_figs.py  parse_long_reads.py  pick_calibration_subset.py  pick_sv_subset.py  process_data.py  profiler.py  pyproject.toml  query_1000genomes.py  query_gnomad.py  query_stix.sh  query_stix_lr.sh  query_stix_multifile.sh  (+15 more)
assets/: 3:173522965_3:173524108.txt  insert_sizes.csv
paper/: analyze_calibration_results.py  analyze_results.py  analyze_synthetic_calibration_results.py  cluster_viz.sh  explore.py  gatk_clustering.py  generate_synthetic_calibration_data.py  meeting_notes.md  paper_figs.py  read_distribution.py  run_lr_until_converge.py  test_model_structure.py  time_stix_queries.py
paper/bash/: samplot_paper_viz.sh
paper/calibration/: pick_calibration_subset.py  sv_genotyping.py
paper/data_processing/: copy_files.py  download_long_read_evidence.py  (+2 more)
scripts/: calibrate_model.py  paper_figs.py  query_stix_all.py  query_sv.py  run_all_sv.py  run_lr_until_converge.py  run_svs_until_converge.py  split_all.py  split_one.py  synthetic_tests.py
(+49 files in other folders)
