[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "split"
version = "0.1.0"
description = "A package for generating synthetic ecological networks."
authors = [{ name = "Vivian Li", email = "vivian.li@colorado.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bio>=1.7.1",
    "bokeh>=3.3.4",
    "brokenaxes>=0.6.1",
    "matplotlib>=3.8.3",
    "matplotlib-inline>=0.1.6",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "psutil>=7.0.0",
    "pysam>=0.23.3",
    "pytest>=8.3.5",
    "scikit-learn>=1.4.1",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[project.optional-dependencies]
dev = ["matplotlib>=3.10.8", "ipykernel>=7.2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/vivian-m-li/sv_gmm"
